--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src = "/voiceRec.js" defer></script>
+    <script src = "/voiceRec.js"></script>
     <title>Voice copy paste</title>
 </head>
 <body>
