added styling for the page

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -4,10 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/stylesheet.css">
     <script src = "/voiceRec.js"></script>
     <title>Voice copy paste</title>
 </head>
 <body>
+    <header>
+        <h1>PASTY</h1>
+        <span>Copy paste using voice recognition</span>
+    </header>
+
+    <btn type="button" id="listenButton" class="listenButton"></btn>
     
+    <section>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+        </p>
+    </section>
+
 </body>
 </html>
