--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -14,7 +14,9 @@
         <span>Copy paste using voice recognition</span>
     </header>
 
-    <btn type="button" id="listenButton" class="listenButton"></btn>
+    <btn type="button" id="listenButton" class="listenButton">
+        <p class = "copyText hidden">Select text first</p>
+    </btn>
     
     <section>
         <p>
