--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheet.css">
-    <script src = "/voiceRec.js"></script>
+    <script src = "/voiceRec.js" defer></script>
     <title>Voice copy paste</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     </header>
 
     <btn type="button" id="listenButton" class="listenButton">
-        <p class = "copyText hidden">Select text first</p>
+        <p class = "copyText hidden" id="copyText">Select text first and say COPY!</p>
     </btn>
     
     <section>
