--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -40,20 +40,27 @@ span {
     margin-bottom: 10px;
 }
 
-.listenButton::before {
+.listenCopyButton::before,  .listenPasteButton::before{
     content: '';
     background-size: cover;
     width: 100%;
     height: 100%;
     position: absolute;
 
-    background-image: url('/img/mic.png');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100px;
+    background-size: 75px;
 }
 
-.listenButton {
+.listenCopyButton::before{
+    background-image: url('/img/copy.png');
+}
+
+.listenPasteButton::before{
+    background-image: url('/img/paste.png');
+}
+
+.listenCopyButton, .listenPasteButton{
     width: 150px;
     height: 150px;
     display: block;
@@ -64,16 +71,16 @@ span {
     transition: all 0.15s ease-in;
 }
 
-.listenButton:hover {
+.listenCopyButton:hover, .listenPasteButton:hover {
     opacity: 0.9;
     transform: scale(1.07);
 }
 
-.listenButton:active {
+.listenCopyButton:active, .listenPasteButton:active {
     transform: scale(1.15);
 }
 
-.copyText {
+.copyText, .pasteText {
     font-size: 1.3em;
     position: absolute;
     width: 100%;
@@ -82,6 +89,19 @@ span {
     text-align: center;
 }
 
-.hidden{
+.hidden {
     visibility: hidden;
+}
+
+.speechButtons {
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+}
+
+textarea{
+    width: 100%;
+    height: 100px;
 }
