pasting in the same text box works

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -68,9 +68,8 @@
             dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
         </p>
 
-        <textarea id="clipboard-paste">
-
-        </textarea>
+        <textarea></textarea>
+        <textarea></textarea>
     </section>
 
 </body>
