changed it to dutch

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -10,17 +10,17 @@
 </head>
 <body>
     <header>
-        <h1>SMASHY</h1>
-        <span>Copy paste using voice recognition</span>
+        <h1>PLAKKY</h1>
+        <span>Kopier en plak met spraakopname</span>
     </header>
 
     <div class = "speechButtons">
         <btn type="button" id="listenCopyButton" class="listenCopyButton">
-            <p class = "copyText hidden" id="copyText">Select text first and say COPY!</p>
+            <p class = "copyText hidden" id="copyText">Selecteer tekst en zeg KOPIËREN!</p>
         </btn>
     
         <btn type="button" id="listenPasteButton" class="listenPasteButton">
-            <p class = "pasteText hidden" id="pasteText">Select an area to paste and say SMASH!</p>
+            <p class = "pasteText hidden" id="pasteText">Selecteer een tekstvlak en zeg PLAKKEN!</p>
         </btn>
     </div>
     
