--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -15,7 +15,7 @@ body {
 header {
     width: 30%;
     border-bottom: 1px solid black;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 p {
@@ -30,6 +30,13 @@ h1 {
     font-weight: 900;
     text-align: center;
     margin-top: 20px;
+}
+
+h2{
+    font-size: 1.5em;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 span {
@@ -107,7 +114,7 @@ span {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    gap: 20px;
+    gap: 40px;
 }
 
 textarea {
