--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -13,6 +13,7 @@
         <h1>PLAKKY</h1>
         <span>Kopier en plak met spraakopname</span>
     </header>
+    <h2>druk op de knoppen om te kopiëren en plakken</h2>
     <div class = "speechButtons">
         <btn type="button" id="listenCopyButton" class="listenCopyButton">
             <p class = "copyText hidden" id="copyText">Selecteer tekst en zeg KOPIËREN!</p>
@@ -41,28 +42,6 @@
             Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
             dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-        </p>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
         </p>
 
         <textarea></textarea>
