--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300&family=Quintessential&family=Roboto+Serif:wght@500&display=swap');
+@import url("https://use.fontawesome.com/releases/v5.10.0/css/all.css");
+
 
 * {
     margin: 0 auto;
-
     font-family: 'League Spartan', sans-serif;
 }
 
@@ -32,14 +33,14 @@ h1 {
     margin-top: 20px;
 }
 
-h2{
+h2 {
     font-size: 1.5em;
     font-weight: 400;
     text-align: center;
     margin-bottom: 10px;
 }
 
-span {
+.subTitle {
     font-size: 1.3em;
     font-weight: 400;
     text-align: center;
@@ -120,4 +121,76 @@ span {
 textarea {
     width: 100%;
     height: 100px;
+}
+
+
+
+
+/* MIC TOGGLE */
+
+@import url("https://use.fontawesome.com/releases/v5.10.0/css/all.css");
+
+.checkboxMic {
+    left: -9999999999px;
+    position: absolute;
+}
+
+.microphone-check {
+    display: inline-flex;
+    display: -webkit-inline-flex;
+    align-items: center;
+    -webkit-align-items: center;
+    width: 13em;
+    height: 5em;
+    background: #3996d4;
+    border-radius: 50px;
+    transition: all 0.6s ease;
+    -webkit-transition: all 0.6s ease;
+    cursor: pointer;
+    box-shadow: inset 2px 2px 8px 0 rgba(0, 0, 0, 0.35),
+        inset -3px -3px 8px 0 rgba(155, 196, 242, 0.5),
+        6px 6px 18px 0 rgba(0, 0, 0, 0), -6px -6px 18px 0 rgba(155, 196, 242, 0);
+    -webkit-box-shadow: inset 2px 2px 8px 0 rgba(0, 0, 0, 0.35),
+        inset -3px -3px 8px 0 rgba(155, 196, 242, 0.5),
+        6px 6px 18px 0 rgba(0, 0, 0, 0), -6px -6px 18px 0 rgba(155, 196, 242, 0);
+}
+
+.microphone-icon {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    -webkit-justify-content: center;
+    align-items: center;
+    -webkit-align-items: center;
+    margin-left: 0.5em;
+    width: 4em;
+    height: 4em;
+    border-radius: 50%;
+    transition: all 0.6s ease;
+    -webkit-transition: all 0.6s ease;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+}
+
+.microphone-icon:before {
+    content: "\f130";
+    color: #fff;
+    font-size: 30px;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+}
+
+input[type="checkbox"]:checked+.microphone-check {
+    background: #e34c38;
+}
+
+input[type="checkbox"]:checked+.microphone-check .microphone-icon {
+    margin-left: 8.5em;
+    background: #e34c38;
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
+
+input[type="checkbox"]:checked+.microphone-check .microphone-icon::before {
+    content: "\f131";
 }
