--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -13,8 +13,8 @@
         <h1>PLAKKY</h1>
         <span class = "subTitle">Kopier en plak met spraakopname</span>
     </header>
-    <div>
-        <input class = "checkboxMic" id="microphone" type="checkbox" checked />
+    <div class = "toggleBarMic">
+        <input class = "checkboxMic" id="microphone" type="checkbox" unchecked />
         <label for="microphone" class="microphone-check">
           <span class="microphone-icon"></span>
         </label>
