--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -13,6 +13,8 @@
         <h1>PLAKKY</h1>
         <span class = "subTitle">Kopier en plak met spraakopname</span>
     </header>
+    <p>Zeg kopiëren!</p>
+    <p>Zeg plakken!</p>
     <div class = "toggleBarMic">
         <input class = "checkboxMic" id="microphone" type="checkbox" unchecked />
         <label for="microphone" class="microphone-check">
