--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,50 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheet.css">
-    <script src = "/voiceRec.js" defer></script>
+    <script src="/voiceRec.js" defer></script>
     <title>Voice copy paste</title>
 </head>
+
 <body>
     <header>
         <h1>PLAKKY</h1>
-        <span class = "subTitle">Kopier en plak met spraakopname</span>
+        <span class="subTitle">Kopier en plak met spraakopname</span>
     </header>
-    <p>Zeg kopiëren!</p>
+    <p>Selecteer tekst en zeg kopiëren!</p>
+    <p>Zeg kopieer! en zeg de zin die je wilt kopiëren</p>
     <p>Zeg plakken!</p>
-    <div class = "toggleBarMic">
-        <input class = "checkboxMic" id="microphone" type="checkbox" unchecked />
+    <div class="toggleBarMic">
+        <input class="checkboxMic" id="microphone" type="checkbox" unchecked />
         <label for="microphone" class="microphone-check">
-          <span class="microphone-icon"></span>
+            <span class="microphone-icon"></span>
         </label>
-      </div>
+    </div>
+
     <section>
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
+            Frank gaat boodschappen doen op de markt. Hij heeft twee tassen bij zich, een grote en een kleine. Op de
+            markt is het druk en gezellig. Hij heeft tien euro. Bij de groenteman koopt Frank een krop sla en vier
+            appels. Dat kost drie euro, zegt de groenteman. Frank geeft hem het biljet van tien euro. Hij krijgt zeven
+            euro terug. Hij stopt de groenten en het fruit in de grote tas.
         </p>
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est, 
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est,
             dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         </p>
 
         <textarea></textarea>
     </section>
 
 </body>
+
 </html>
