added dnd styling

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -16,7 +16,7 @@
         <span class="subTitle">Kopier en plak met spraakopname</span>
     </header>
     <p>Selecteer tekst en zeg kopiëren!</p>
-    <p>Zeg kopieer! en zeg de zin die je wilt kopiëren</p>
+    <p>Zeg kopieer! en zeg het woord die je wilt kopiëren</p>
     <p>Zeg plakken!</p>
     <div class="toggleBarMic">
         <input class="checkboxMic" id="microphone" type="checkbox" unchecked />
@@ -27,16 +27,23 @@
 
     <section>
         <p>
-            Frank gaat boodschappen doen op de markt. Hij heeft twee tassen bij zich, een grote en een kleine. Op de
-            markt is het druk en gezellig. Hij heeft tien euro. Bij de groenteman koopt Frank een krop sla en vier
-            appels. Dat kost drie euro, zegt de groenteman. Frank geeft hem het biljet van tien euro. Hij krijgt zeven
-            euro terug. Hij stopt de groenten en het fruit in de grote tas.
-        </p>
-        <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Hic nostrum expedita aperiam accusamus, nesciunt quae consequuntur est,
-            dolorum excepturi itaque delectus labore quo earum repellat! Eius beatae culpa harum repudiandae.
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Mijn naam is Aimil Sileas. Ik ben een high elf van de bloedlijn Gilios. Het is niet zo dat het gebruikelijk
+            is in mijn familie om kinderen dubbele namen te geven, eigenlijk ben ik de enige. Mijn beide broers hebben
+            één naam, evenals mijn vader en zijn zus en evenals hun ouders en ooms. Ik ben de enige omdat over mijn
+            bestaan al voor mijn geboorte discussie was. Mijn moeder wist dat ze een vrouw, een tovenares, in zich droeg
+            en was zo dom dit met mijn vader te delen. De laatste tovenares in onze familie is op brute wijze vermoord
+            en sindsdien denkt mijn vader dat alle elven, in het bijzonder strijdlustige vrouwen, buiten de grenzen van
+            de stad groot gevaar lopen. Een vrouw die vertrekt uit de stad is wat hem betreft overleden. Hij zal je
+            bestaan ontkennen, ook al sta je voor zijn neus. Misschien is dat wel één van de belangrijkste redenen voor
+            mijn vertrek geweest.
+            In ieder geval, mijn ouders waren het niet eens over mij. Gezien latere gebeurtenissen kan ik dat begrijpen,
+            maar dat wisten ze allemaal nog niet. Mijn moeder wilde haar kind kansen geven en mijn vader was er enkel
+            van overtuigd dat ik een gruwelijke dood tegemoet zal gaan. De ene ruzie was nog niet afgelopen of de
+            volgende ontstond. Ze waren zo druk bezig met het regelen van mijn toekomst dat ze geen tijd hadden genomen
+            om samen een naam te kiezen. Pas toen ik schreeuwend in hun trillende armen lag herinnerde ze zich dat hun
+            dochter naamloos was. Om verdere discussie te voorkomen, gaven ze mij allebei een naam. Aimil van mijn
+            moeder en Sileas van mijn vader. En daar was ik! En ik ben er nog, hoewel mijn vader dat ondertussen
+            waarschijnlijk zal ontkennen.
         </p>
 
         <textarea></textarea>
