--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -5,32 +5,36 @@
 * {
     margin: 0 auto;
     font-family: 'League Spartan', sans-serif;
+    color: #ffffff;
 }
 
 body {
-    background-color: white;
-    margin-left: 150px;
+    background-image: url("/img/dndBackground.jpg");
+    background-position: bottom;background-repeat: no-repeat;background-size: cover;margin-left: 150px;
     margin-right: 150px;
 }
 
 header {
     width: 30%;
-    border-bottom: 1px solid black;
+    border-bottom: 3px solid #8996c1;
     margin-bottom: 20px;
+    /* color: black; */
 }
 
 p {
     font-size: 1.3em;
-    font-weight: 300;
+    font-weight: 600;
     text-align: center;
     margin-bottom: 10px;
-}
+text-shadow: 1px 1px 0px #000000;
+    line-height: 1.5rem;}
 
 h1 {
     font-size: 5em;
     font-weight: 900;
     text-align: center;
     margin-top: 20px;
+    color: #ff6464;
 }
 
 h2 {
@@ -42,10 +46,11 @@ h2 {
 
 .subTitle {
     font-size: 1.3em;
-    font-weight: 400;
+    font-weight: 600;
     text-align: center;
     display: block;
     margin-bottom: 10px;
+    color: #ff6464;
 }
 
 .listenCopyButton::before,
@@ -121,6 +126,9 @@ h2 {
 textarea {
     width: 100%;
     height: 100px;
+    background-color: #d3dcfd;
+    color: black;
+    border-radius: 10px;
 }
 
 
@@ -149,7 +157,7 @@ textarea {
     -webkit-align-items: center;
     width: 13em;
     height: 5em;
-    background: #3996d4;
+    background: #cfd7fa;
     border-radius: 50px;
     transition: all 0.6s ease;
     -webkit-transition: all 0.6s ease;
@@ -188,12 +196,12 @@ textarea {
 }
 
 input[type="checkbox"]:checked+.microphone-check {
-    background: #e34c38;
+    background: #ff6464;
 }
 
 input[type="checkbox"]:checked+.microphone-check .microphone-icon {
     margin-left: 8.5em;
-    background: #e34c38;
+    background: #ff6464;
     transform: rotate(360deg);
     -webkit-transform: rotate(360deg);
 }
