--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <img src="/img/dndBackground.jpg" class="bg" alt="">
+
     <header>
         <h1>PLAKKY</h1>
         <span class="subTitle">Kopier en plak met spraakopname</span>
