--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -17,9 +17,11 @@
         <h1>PLAKKY</h1>
         <span class="subTitle">Kopier en plak met spraakopname</span>
     </header>
-    <p>Selecteer tekst en zeg kopiëren!</p>
-    <p>Zeg kopieer! en zeg het woord die je wilt kopiëren</p>
-    <p>Zeg plakken!</p>
+    <div class = "explanation">
+        <p>Selecteer tekst en zeg kopiëren!</p>
+        <p>Zeg kopieer! en zeg het woord die je wilt kopiëren</p>
+        <p>Zeg plakken!</p>
+    </div>
     <div class="toggleBarMic">
         <input class="checkboxMic" id="microphone" type="checkbox" unchecked />
         <label for="microphone" class="microphone-check">
@@ -42,6 +44,12 @@
 
         <textarea></textarea>
     </section>
+
+    <div id="pop-up">
+        <div>
+            <p></p>
+        </div>
+    </div>
 
 </body>
 
