--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -144,6 +144,31 @@ textarea {
     border-radius: 10px;
 }
 
+#pop-up {
+    display: none;
+    width: 100vw;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+#pop-up.show {
+    display: block;
+}
+
+#pop-up div {
+    width: fit-content;
+    background: grey;
+    border-radius: 5px;
+    padding: 10px;
+    margin: 0 auto;
+    margin-bottom: 25px;
+}
+
+#pop-up div p {
+    color: white;
+    margin: 0;
+}
 
 
 
