--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -170,6 +170,16 @@ textarea {
     margin: 0;
 }
 
+.explanation{
+    background-color: #b1fea8b3;
+    width: 600px;
+    border-radius: 10px;
+}
+
+.explanation p{
+    color: black
+;/* box-shadow: none; */text-shadow: none;text-decoration: underline;line-height: 1.5rem;}
+
 
 
 /* MIC TOGGLE */
@@ -195,7 +205,7 @@ textarea {
     -webkit-align-items: center;
     width: 13em;
     height: 5em;
-    background: #cfd7fa;
+    background: #b1fea8;
     border-radius: 50px;
     transition: all 0.6s ease;
     -webkit-transition: all 0.6s ease;
