--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -13,15 +13,16 @@ body {
     margin-right: 150px;
 }
 
-.bg{
-    position: fixed; 
-    top: 0; 
-    left: 0; 
-      
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+
     /* Preserve aspet ratio */
     min-width: 100%;
     min-height: 100%;
-z-index: -1;}
+    z-index: -1;
+}
 
 header {
     width: fit-content;
@@ -170,15 +171,19 @@ textarea {
     margin: 0;
 }
 
-.explanation{
+.explanation {
     background-color: #b1fea8b3;
     width: 600px;
     border-radius: 10px;
 }
 
-.explanation p{
-    color: black
-;/* box-shadow: none; */text-shadow: none;text-decoration: underline;line-height: 1.5rem;}
+.explanation p {
+    color: black;
+    /* box-shadow: none; */
+    text-shadow: none;
+    text-decoration: underline;
+    line-height: 1.5rem;
+}
 
 
 
@@ -188,6 +193,7 @@ textarea {
 
 .toggleBarMic {
     width: 100%;
+    z-index: 1;
     position: relative;
     display: grid;
     margin-bottom: 20px;
@@ -256,4 +262,90 @@ input[type="checkbox"]:checked+.microphone-check .microphone-icon {
 
 input[type="checkbox"]:checked+.microphone-check .microphone-icon::before {
     content: "\f131";
+}
+
+
+
+
+.dropdown {
+    position: relative;
+    width: 250px;
+    filter: url(#goo);
+    z-index: 5;
+    margin-bottom: 30px;
+}
+
+.dropdown__face,
+.dropdown__items {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 25px;
+}
+
+.dropdown__face {
+    display: block;
+    position: relative;
+}
+
+.dropdown__items {
+    margin: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    width: 100%;
+    justify-content: space-between;
+    visibility: hidden;
+    list-style-type: none;
+    z-index: -1;
+    opacity: 0;
+    transition: all 0.4s cubic-bezier(0.93, 0.88, 0.1, 0.8);
+    text-align: center;
+    display: block;
+}
+
+.dropdown__items p,
+.dropdown__text {
+    color: #000;
+}
+
+.dropdown__items::before {
+    content: "";
+    background-color: #fff;
+    position: absolute;
+    bottom: 100%;
+    right: 20%;
+    height: 40px;
+    width: 20px;
+}
+
+.dropdown__arrow {
+    border-bottom: 2px solid #000;
+    border-right: 2px solid #000;
+    position: absolute;
+    top: 50%;
+    right: 30px;
+    width: 10px;
+    height: 10px;
+    transform: rotate(45deg) translateY(-50%);
+    transform-origin: right;
+}
+
+.dropdown input {
+    display: none;
+}
+
+.dropdown input:checked~.dropdown__items {
+    top: calc(100% + 25px);
+    visibility: visible;
+    opacity: 1;
+    position: absolute;
+    z-index: 12;
+}
+
+body {
+    background-image: linear-gradient(140deg, #e2e2e2, #cdcdcd);
+}
+
+svg {
+    display: none;
 }
