--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@300&family=Quintessential&family=Roboto+Serif:wght@500&display=swap');
 @import url("https://use.fontawesome.com/releases/v5.10.0/css/all.css");
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
 
 * {
     margin: 0 auto;
-    font-family: 'Cinzel', serif;
+    font-family: 'Macondo', cursive;
     color: #ffffff;
 }
 
@@ -26,7 +26,7 @@ body {
 
 header {
     width: fit-content;
-    border-bottom: 3px solid #8996c1;
+    border-bottom: 3px solid #8dbeb0;
     margin-bottom: 20px;
     /* color: black; */
 }
@@ -46,7 +46,7 @@ h1 {
     font-weight: 900;
     text-align: center;
     margin-top: 20px;
-    color: #545b6f;
+    color: #8dbeb0;
     text-shadow: 1px 1px 1px #000000;
 }
 
@@ -140,10 +140,11 @@ h2 {
 textarea {
     width: 100%;
     height: 100px;
-    background-color: #d3dcfd;
+    background-color: #8dbeb0;
     color: black;
     border-radius: 10px;
-}
+box-shadow: inset 2px 2px 8px 0 rgb(0 0 0 / 35%), inset -3px -3px 8px 0 rgb(155 196 242 / 50%), 6px 6px 18px 0 rgb(0 0 0 / 0%), -6px -6px 18px 0 rgb(155 196 242 / 0%);
+    -webkit-box-shadow: inset 2px 2px 8px 0 rgb(0 0 0 / 35%), inset -3px -3px 8px 0 rgb(155 196 242 / 50%), 6px 6px 18px 0 rgb(0 0 0 / 0%), -6px -6px 18px 0 rgb(155 196 242 / 0%);}
 
 #pop-up {
     display: none;
@@ -211,7 +212,7 @@ textarea {
     -webkit-align-items: center;
     width: 13em;
     height: 5em;
-    background: #b1fea8;
+    background: #8dbeb0;
     border-radius: 50px;
     transition: all 0.6s ease;
     -webkit-transition: all 0.6s ease;
@@ -306,7 +307,8 @@ input[type="checkbox"]:checked+.microphone-check .microphone-icon::before {
 .dropdown__items p,
 .dropdown__text {
     color: #000;
-}
+font-size: 1.3em;text-shadow: 1px 1px 1px #b3b3b3;
+    line-height: 1em;}
 
 .dropdown__items::before {
     content: "";
