--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/stylesheet.css">
     <script src="/voiceRec.js" defer></script>
+    <script src="/dice.js" defer></script>
     <title>Voice copy paste</title>
 </head>
 
@@ -17,6 +18,31 @@
         <h1>PLAKKY</h1>
         <span class="subTitle">Kopier en plak met spraakopname</span>
     </header>
+
+    <div class="content">
+      <div class="die">
+        <figure class="face face-1"></figure>
+        <figure class="face face-2"></figure>
+        <figure class="face face-3"></figure>
+        <figure class="face face-4"></figure>
+        <figure class="face face-5"></figure>
+        <figure class="face face-6"></figure>
+        <figure class="face face-7"></figure>
+        <figure class="face face-8"></figure>
+        <figure class="face face-9"></figure>
+        <figure class="face face-10"></figure>
+        <figure class="face face-11"></figure>
+        <figure class="face face-12"></figure>
+        <figure class="face face-13"></figure>
+        <figure class="face face-14"></figure>
+        <figure class="face face-15"></figure>
+        <figure class="face face-16"></figure>
+        <figure class="face face-17"></figure>
+        <figure class="face face-18"></figure>
+        <figure class="face face-19"></figure>
+        <figure class="face face-20"></figure>
+      </div>
+    </div>
 
     <div class="dropdown">
         <input type="checkbox" id="dropdown">
