--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -372,10 +372,12 @@ svg {
 
   .content {
     margin: auto auto;
-    position: relative;
+    position: absolute;
     width: 200px;
     height: 200px;
     perspective: 1500px;
+    top: 0;
+    margin-top: 20px;
   }
   .die {
     position: absolute;
