added small changes

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -58,10 +58,10 @@
         <p>Selecteer tekst en zeg kopiëren!</p>
       </li>
       <li>
-        <p>Zeg kopieer! en zeg het woord die je wilt kopiëren</p>
+        <p>Zeg kopieer! en zeg het woord/woorden die je wilt kopiëren</p>
       </li>
       <li>
-        <p>Zeg plakken!</p>
+        <p>Klik op een tekstsvlak en zeg plakken!</p>
       </li>
     </ul>
   </div>
